--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
       .container {
-        padding-top: 60px;
+        padding-top: 40px;
         max-width: 1200px;
+        width: 90%;
+        margin: 0 auto;
       }
       h1 {
         text-align: center;
@@ -27,6 +29,11 @@
         font-weight: 700;
         color: #ffffff;
         text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+      }
+      .chart-wrapper {
+        position: relative;
+        width: 100%;
+        height: 60vh; /* altura proporcional à tela */
       }
       canvas {
         background-color: #2c2c3e;
@@ -39,7 +46,9 @@
   <body>
     <div class="container">
       <h1>Pesquisa de Satisfação</h1>
-      <canvas id="chart"></canvas>
+      <div class="chart-wrapper">
+        <canvas id="chart"></canvas>
+      </div>
     </div>
 
     <script>
@@ -80,6 +89,7 @@
         },
         options: {
           responsive: true,
+          maintainAspectRatio: false,
           plugins: {
             legend: { display: false },
             tooltip: {
@@ -94,12 +104,12 @@
             y: {
               beginAtZero: true,
               precision: 0,
-              ticks: { stepSize: 1 },
+              ticks: { stepSize: 1, color: "#f8f9fa" },
             },
             x: {
               ticks: {
                 color: ['#ff4d4d', '#ff9f43', '#ffd60a', '#9eff6e', '#00d98f'],
-                font: { size: 22 },
+                font: { size: 18 },
               },
             },
           },
@@ -118,8 +128,8 @@
         const counts = [0, 0, 0, 0, 0];
         snapshot.forEach((doc) => {
           const data = doc.data();
-          const ratingStr = data.avaliacao; // string
-          const index = mapping[ratingStr]; // converte para índice do gráfico
+          const ratingStr = data.avaliacao;
+          const index = mapping[ratingStr];
           if (index !== undefined) {
             counts[index]++;
           }
